logs/job_1091.err
  File "/home/ihubnvidia20/vqe.py", line 43
    basis="sto-3g",
    ^
SyntaxError: invalid syntax
